--- a/photos/index.html
+++ b/photos/index.html
@@ -70,7 +70,6 @@ div.desc {
   </div>
 </div>
 
-
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://f004.backblazeb2.com/file/passets/pphotos/20220509_184539076.webp">
@@ -94,7 +93,7 @@ div.desc {
     <a target="_blank" href="https://f004.backblazeb2.com/file/passets/pphotos/20220509_184532228.webp">
       <img src="https://f004.backblazeb2.com/file/passets/pphotos/thumb_20220509_184532228.webp" alt="Palm" width="240" height="180">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">2022-05-09 Wattles Park LA,CA,U</div>
   </div>
 </div>
 
