--- a/photos/index.html
+++ b/photos/index.html
@@ -55,7 +55,7 @@ div.desc {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://f004.backblazeb2.com/file/passets/pphotos/20220524_185525318.webp">
-      <img src="https://f004.backblazeb2.com/file/passets/pphotos/thumb_20220524_185525318.webp" alt="Spring" width="240" height="180">
+      <img src="https://f004.backblazeb2.com/file/passets/pphotos/thumb_20220524_185525318.webp" alt="Pupper" width="240" height="180">
     </a>
     <div class="desc">2022-05-24 Wattles Park LA,CA,US</div>
   </div>
@@ -93,9 +93,19 @@ div.desc {
     <a target="_blank" href="https://f004.backblazeb2.com/file/passets/pphotos/20220509_184532228.webp">
       <img src="https://f004.backblazeb2.com/file/passets/pphotos/thumb_20220509_184532228.webp" alt="Palm" width="240" height="180">
     </a>
-    <div class="desc">2022-05-09 Wattles Park LA,CA,U</div>
+    <div class="desc">2022-05-09 Wattles Park LA,CA,US</div>
   </div>
 </div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://f004.backblazeb2.com/file/passets/pphotos/IMG_1014.webp">
+      <img src="https://f004.backblazeb2.com/file/passets/pphotos/thumb_IMG_1014.webp" alt="FDR" width="240" height="180">
+    </a>
+    <div class="desc">2017-03-02 FDR Presidential Library Hyde Park,NY,US</div>
+  </div>
+</div>
+
 
 <div class="clearfix"></div>
 
